XP-1255 Image Editor - Place Zoom control top/horizontally aligned fixed below edit panel
- updated zoom line color and width

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
@@ -288,16 +288,16 @@
 
       .zoom-line {
         .opacity(0.5);
-        height: 4px;
-        margin: 8px 0 8px 100px;
-        background-color: #CCC;
+        height: 2px;
+        margin: 9px 0 9px 100px;
+        background-color: #444;
         position: relative;
         overflow: visible;
 
         .zoom-knob {
           cursor: ew-resize;
           position: absolute;
-          margin-top: -8px;
+          margin-top: -9px;
           margin-left: -10px;
           left: 0;
           height: 20px;
